# cling

./: .ignore  .rustfmt.toml  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/workflows/: check.yml  scheduled.yml  test.yml
cling/: Cargo.toml  build.rs
cling-derive/: Cargo.toml
cling-derive/src/: attributes.rs  cling_handler.rs  derives.rs  lib.rs
cling/src/: anymap.rs  app.rs  args.rs  command.rs  effects.rs  error.rs  extractors.rs  handler.rs  lib.rs  params.rs
cling/tests/: examples_tests.rs  handler_tests.rs  ui.rs
cling/tests/derive/: base-case-success.rs
examples/: bad-practice.rs  complex.rs  errors.rs  lowlevel.rs  many_handlers.rs  multi-level-sync.rs  projects.rs  repl.rs  simple-multi-command.rs  simple.rs
examples/cmd/: bad-practice.toml  complex-calc-add.toml  complex-calc-subtract.toml  complex-groot.toml  multi-level-beep.toml  multi-level-honk-err.toml  multi-level-honk-success.toml  multi-level-stderr-help.toml  simple-multi-command-beep.toml  simple-multi-command-help.toml  simple-multi-command-honk-err.toml  simple-multi-command-honk-success.toml
