[workspace]
resolver = "2"
members = ["cling", "cling-derive"]

[workspace.package]
version = "0.0.0-alpha.3"
edition = "2021"
authors = ["Ahmed Farghal <me@asoli.dev>"]
license = "Apache-2.0 OR MIT"
rust-version = "1.65.0"  # MSRV
keywords = ["click", "cli", "framework"]
repository = "https://github.com/AhmedSoliman/cling"


[workspace.dependencies]
tracing = { version = "0.1", features = ["log"] }
thiserror = { version = "1.0" }
static_assertions = { version = "1.1" }
