[package]
name = "cling-derive"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true
bench = false

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits", "printing"] }
quote = "1.0"
darling = "0.20"

[dev-dependencies]
syn = { version = "2.0", features = ["extra-traits", "full", "parsing"] }
pretty_assertions = "1.3"
