[package]
name = "cling"
description = "[WIP] An opinionated Rust framework for building multi-level command-line applications on top of clap.rs"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.65.0"
categories = ["command-line-interface"]
include = ["**/*.rs", "../README.md", "../LICENSE", "../examples"]
readme = "../README.md"

[dependencies]
cling-derive = { path = "../cling-derive", version = "0.0.0-alpha.4", optional = true }
clap = { version = "4", features = ["env", "derive", "wrap_help"] }
clap-stdin = { version = "0.2" }
thiserror = { workspace = true }
static_assertions = { workspace = true }
anyhow = { version = "1.0" }
colored = { version = "2.0" }
async-trait = { version = "0.1.65" }
indoc = { version = "2.0" }
termcolor = { version = "1.2" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
trybuild = { version = "1.0" }
trycmd = { version = "0.14.16", features = ["examples"] }

[features]
default = ["derive"]
derive = ["dep:cling-derive"]

[[example]]
name = "complex"
path = "../examples/complex.rs"

[[example]]
name = "simple"
path = "../examples/simple.rs"

[[example]]
name = "multi-level-sync"
path = "../examples/multi-level-sync.rs"
